# pg_node2graph

./: .editorconfig  .gitignore  404.html  CNAME  Makefile  README.md  index.html  meson.build  mkdocs.yml  node2dot.cc  node_border_color.map  node_color.map  pg_node2graph  pg_node2graph.cc  search.html
.github/workflows/: pages.yml
docs/: index.md
nodes/: example1.node
search/: search_index.json
